# innomd

./: .gitignore  LICENSE  README.md  ROADMAP.md  innomd  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  tests.yml
innomd/: __init__.py  __main__.py
innomd/diagrams/: __init__.py  detect.py  errors.py  ir.py  ir_class.py  ir_gantt.py  ir_sequence.py  public.py
innomd/diagrams/adapters/: mermaid.py  mermaid_class.py  mermaid_gantt.py  mermaid_sequence.py  plantuml_activity.py  plantuml_c4.py  plantuml_class.py  plantuml_gantt.py  plantuml_sequence.py
innomd/diagrams/layout/: grandalf.py
innomd/diagrams/render/: ascii.py  box.py  class_.py  gantt.py  sequence.py
tests/: conftest.py  test_diagrams.py  test_e2e.py  test_ipynb.py  test_math.py  test_preprocess.py  test_watch.py
