[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "innomd"
version = "0.3.0"
description = "Terminal Markdown viewer with LaTeX math, Jupyter notebooks, live reload, and themes."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "Ivan Maradzhiyski", email = "ivan.maradzhiyski@innomatica.de" },
]
maintainers = [
    { name = "Innomatica GmbH", email = "ivan.maradzhiyski@innomatica.de" },
]
keywords = [
    "markdown", "latex", "math", "terminal", "cli", "viewer",
    "jupyter", "ipynb", "live-reload", "pager", "rich",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Terminals",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Utilities",
]
dependencies = [
    "rich>=13.0",
    "grandalf>=0.8",
]

[project.urls]
Homepage = "https://github.com/Innomatica-GmbH/innomd"
Repository = "https://github.com/Innomatica-GmbH/innomd"
Issues = "https://github.com/Innomatica-GmbH/innomd/issues"
Changelog = "https://github.com/Innomatica-GmbH/innomd/releases"
Organization = "https://innomatica.de"

[project.scripts]
innomd = "innomd:main"

[tool.setuptools.packages.find]
include = ["innomd*"]
exclude = ["tests*", "assets*"]
